tests/rosetta/out/Fortran/count-in-octal-3.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program count_in_octal_3
  implicit none
    character(len=100) :: digits
    character(len=100) :: out
    integer :: v
    integer :: d
    real :: i
    integer :: next
  call main()
  
  contains
  recursive character(len=100) function toOct(n) result(res)
    integer, intent(in) :: n
    if ((n == 0)) then
      res = '0'
      return
    end if
    digits = '01234567'
    out = ''
    v = n
    do while ((v > 0))
      d = mod(v,8)
      out = (digits((d)+1:(d + 1)) + out)
      v = (v / 8)
    end do
    res = out
    return
  end function toOct
  recursive subroutine main()
    i = 0.0
    do while (.true.)
      print *, toOct(int(i))
      next = (i + 1.0)
      if ((next == i)) then
        exit
      end if
      i = next
    end do
  end subroutine main
end program count_in_octal_3
